ibuilder/tests/not_compile/unknown_attribute3.stderr
error: unknown attribute
 --> $DIR/unknown_attribute3.rs:5:16
  |
5 |     #[ibuilder(wibble(monster))]
  |                ^^^^^^^^^^^^^^^

error: unknown attribute
  --> $DIR/unknown_attribute3.rs:10:12
   |
10 | #[ibuilder(wibble(monster))]
   |            ^^^^^^^^^^^^^^^

error: unknown attribute
  --> $DIR/unknown_attribute3.rs:16:12
   |
16 | #[ibuilder(wibble(monster))]
   |            ^^^^^^^^^^^^^^^

error: unknown attribute
  --> $DIR/unknown_attribute3.rs:23:16
   |
23 |     #[ibuilder(wibble(monster))]
   |                ^^^^^^^^^^^^^^^
